change count value

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
 
         stop.addEventListener('click', () => {
             clearInterval(timer);
-            count = 10;
+            count = countNumber;
             countNumber.innerText = count;
             play.innerHTML = `
                 <i class="fa-solid fa-play text-2xl"></i>
