--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../output/style.css">
 </head>
 <body> 
-    <div class="bg-[url('./images/bg.png')] bg-cover bg-center" data-theme="dark">
+    <div class="bg-[url('./images/bg.jpg')] bg-cover bg-center" data-theme="dark">
         <div class="w-full h-screen flex justify-center items-center px-4 bg-overlay">
             <!-- Stop watch / Timer -->
             <div>
@@ -77,7 +77,7 @@
 
         stop.addEventListener('click', () => {
             clearInterval(timer);
-            count = countNumber;
+            count = 5;
             countNumber.innerText = count;
             play.innerHTML = `
                 <i class="fa-solid fa-play text-2xl"></i>
