--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,15 @@
         <div class="w-full h-screen flex justify-center items-center px-4 bg-overlay">
             <!-- Stop watch / Timer -->
             <div>
-                <div class="w-52 h-52 flex justify-center items-center rounded-full border-4 border-slate-700">
-                    <span id="count" class="text-4xl font-bold">5</span>
+                <div class="w-52 h-52 flex justify-center items-center rounded-full border-4 border-slate-700 overflow-hidden">
+                    <div id="count" class="text-4xl font-bold">5</div>
                     <!-- Audio -->
                     <audio id="lofi" class="hidden" controls>
                         <source src="../output/media/audio.mp3" type="audio/mp3">
                     </audio>
                 </div>
                 <div class="flex gap-10 justify-between">
-                    <!-- <label class="swap">
-                        <input type="checkbox" />
-                        <i class="swap-on fill-current fa-solid fa-pause text-2xl"></i> 
-                        <i class="swap-off fill-current fa-solid fa-play text-2xl"></i>
-                    </label> -->
-                    <button id="play">
+                    <button id="play" class="playing">
                         <i class="fa-solid fa-play text-2xl"></i>
                         <p>Play</p>
                     </button>
@@ -68,6 +63,9 @@
                         clearInterval(timer);
                         if(count == 0) {
                             audioLofi.play();
+                            countNumber.innerHTML = `
+                                <img src="../output/images/download.gif" class="w-52 h-52 object-cover rounded-full">
+                            `;
                         }
                     }
                 }, 1000);
