--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,15 @@
     <link rel="stylesheet" href="../output/style.css">
 </head>
 <body> 
-    <div class="bg-[url('./images/bg.jpg')] bg-cover bg-center" data-theme="dark">
-        <div class="w-full h-screen flex justify-center items-center px-4 bg-overlay">
+    <div data-theme="dark">
+        <div class="w-full h-screen">
+            <!-- video -->
+            <video id="bg-video" loop poster="../output/images/bg.jpg" class="w-full h-full object-cover aspect-video relative">
+                <source src="../output/media/bg-video.mp4" type="video/mp4">
+            </video>
+
             <!-- Stop watch / Timer -->
-            <div>
+            <div class="w-full h-screen flex flex-col gap-5 justify-center items-center px-4 bg-overlay absolute top-0 bottom-0 left-0 right-0">
                 <div class="w-52 h-52 flex justify-center items-center rounded-full border-4 border-slate-700 overflow-hidden">
                     <div id="count" class="text-4xl font-bold">5</div>
                     <!-- Audio -->
@@ -21,8 +26,8 @@
                         <source src="../output/media/audio.mp3" type="audio/mp3">
                     </audio>
                 </div>
-                <div class="flex gap-10 justify-between">
-                    <button id="play" class="playing">
+                <div class="flex gap-28 justify-between">
+                    <button id="play" class="">
                         <i class="fa-solid fa-play text-2xl"></i>
                         <p>Play</p>
                     </button>
@@ -40,6 +45,7 @@
         const stop = document.getElementById('stop');
         const countNumber = document.getElementById('count');
         const audioLofi = document.getElementById('lofi');
+        const bgVideo = document.getElementById('bg-video');
 
         let count = parseInt(countNumber.innerText);
         let timer;
@@ -54,7 +60,7 @@
             } else {
                 play.innerHTML = `
                     <i class="fa-solid fa-pause text-2xl"></i>
-                    <p>Pause</p>
+                    <p>Playing</p>
                 `;
                 timer = setInterval(() => {
                     count--;
@@ -63,6 +69,7 @@
                         clearInterval(timer);
                         if(count == 0) {
                             audioLofi.play();
+                            bgVideo.play();
                             countNumber.innerHTML = `
                                 <img src="../output/images/download.gif" class="w-52 h-52 object-cover rounded-full">
                             `;
