--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,7 @@
             `;
             play.classList.remove('playing');
             audioLofi.pause();
+            bgVideo.src = bgVideo.src;
         })
     </script>
 </body>
